@@ -1,5 +1,6 @@
 15 January 2009
 
+* Support #H for hostname and #S for session name in status-left/right.
 * Two new commands, choose-window and choose-session which work only when bound
   to a key and allow the window or session to be selected from a list. These
   are now bound to "w" and "s" instead of the list commands.
@@ -929,7 +930,7 @@
   (including mutt, emacs). No status bar yet and no key remapping or other
   customisation.
 
-$Id: CHANGES,v 1.212 2009-01-15 19:30:21 nicm Exp $
+$Id: CHANGES,v 1.213 2009-01-15 23:42:21 nicm Exp $
 
  LocalWords:  showw utf UTF fulvio ciriaco joshe OSC APC gettime abc DEF OA clr
  LocalWords:  rivo nurges lscm Erdely eol smysession mysession ek dstname RB ms
